Fixes the bug: the left side panel "conversation list" is not displayed on Safari

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,6 @@
 @media (min-width: 768px) {
     .split-pane-md.split-pane-visible > .split-pane-side {
         min-width: 312px;
+        display: block; // Safari bug fix
     }
 }
